6.0 support, unfinished